use published version of ps-colors

--- a/bower.json
+++ b/bower.json
@@ -20,13 +20,10 @@
     "example"
   ],
   "dependencies": {
-    "purescript-colors": "git://github.com/safareli/purescript-colors#cube",
+    "purescript-colors": "^4.0.0",
     "purescript-halogen": "^2.0.1",
     "purescript-halogen-css": "^6.0.0",
     "purescript-css": "^3.0.0",
     "purescript-colorpicker-halogen": "git://github.com/safareli/purescript-colorpicker-halogen#init"
-  },
-  "resolutions": {
-    "purescript-colors": "cube"
   }
 }
