remove obsolate prescale staff

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "example"
   ],
   "dependencies": {
-    "purescript-colors": "^4.0.0",
+    "purescript-colors": "git://github.com/safareli/purescript-colors#utils",
     "purescript-halogen": "^2.0.1",
     "purescript-halogen-css": "^6.0.0",
     "purescript-css": "^3.0.0",
