use colorstop combinators from ps-colors

--- a/bower.json
+++ b/bower.json
@@ -25,5 +25,8 @@
     "purescript-halogen-css": "^6.0.0",
     "purescript-css": "^3.0.0",
     "purescript-colorpicker-halogen": "git://github.com/safareli/purescript-colorpicker-halogen#init"
+  },
+  "resolutions": {
+    "purescript-colors": "utils"
   }
 }
