--- a/bower.json
+++ b/bower.json
@@ -20,14 +20,11 @@
     "example"
   ],
   "dependencies": {
-    "purescript-colors": "git://github.com/safareli/purescript-colors#utils",
+    "purescript-colors": "^4.3.0",
     "purescript-generics-rep": "^5.2.0",
     "purescript-halogen": "^2.0.1",
     "purescript-halogen-css": "^6.0.0",
     "purescript-css": "^3.0.0",
     "purescript-colorpicker-halogen": "git://github.com/safareli/purescript-colorpicker-halogen#init"
-  },
-  "resolutions": {
-    "purescript-colors": "utils"
   }
 }
