clean up, added versioned purescript-colorpicker dep

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,9 @@
     "purescript-halogen": "^2.0.1",
     "purescript-halogen-css": "^6.0.0",
     "purescript-css": "^3.0.0",
-    "purescript-colorpicker-halogen": "git://github.com/safareli/purescript-colorpicker-halogen#init"
+    "purescript-colorpicker-halogen": "^0.1.0"
+  },
+  "resolutions": {
+    "purescript-colors": "^4.3.0"
   }
 }
